[gd_scene load_steps=9 format=3 uid="uid://dd3ahf4tpfjjh"]

[ext_resource type="Texture2D" uid="uid://87lxk0kljkqp" path="res://imagination.2.png" id="1_6gwin"]
[ext_resource type="Script" uid="uid://bl3kb3vi5e53x" path="res://load.gd" id="1_74lda"]
[ext_resource type="FontFile" uid="uid://bq3qhq1g15yxo" path="res://Minecraft.ttf" id="2_74lda"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q7pnu"]
texture = ExtResource("1_6gwin")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6gwin"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_74lda"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f664m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7pnu"]

[node name="Load" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_74lda")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_q7pnu")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -485.5
offset_top = 50.0
offset_right = 485.5
offset_bottom = 225.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_74lda")
theme_override_font_sizes/font_size = 85
text = "Eclipseborn
 Realm of Eternal Night"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -21.0
offset_right = 417.0
offset_bottom = 198.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99116415, 0.99116427, 0.99116415, 1)
theme_override_colors/font_focus_color = Color(0.0023445855, 0.0023445901, 0.0023446013, 1)
theme_override_colors/font_pressed_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_colors/font_hover_color = Color(0.016551692, 0.01655173, 0.016551802, 1)
theme_override_colors/font_hover_pressed_color = Color(0.008202022, 0.008202025, 0.008202025, 1)
theme_override_colors/icon_normal_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_focus_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_pressed_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_hover_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.021434637, 0.021434635, 0.021434633, 1)
theme_override_fonts/font = ExtResource("2_74lda")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_6gwin")
text = "Gab 69"

[node name="Button2" type="Button" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9852814, 0.9852814, 0.9852814, 1)
theme_override_colors/font_focus_color = Color(0.0006938963, 0.0006938974, 0.00069390115, 1)
theme_override_colors/font_pressed_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/font_hover_color = Color(0.0006938963, 0.0006938974, 0.00069390115, 1)
theme_override_colors/font_hover_pressed_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_normal_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_colors/icon_focus_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_colors/icon_pressed_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_hover_color = Color(3.723037e-05, 3.723037e-05, 3.7230366e-05, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_fonts/font = ExtResource("2_74lda")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_74lda")
text = "No File"

[node name="Button3" type="Button" parent="CanvasLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99116415, 0.99116427, 0.99116415, 1)
theme_override_colors/font_focus_color = Color(0.008202003, 0.008202028, 0.008202062, 1)
theme_override_colors/font_pressed_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_colors/font_hover_color = Color(0.008202003, 0.008202028, 0.008202062, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_normal_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_focus_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_pressed_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_hover_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_fonts/font = ExtResource("2_74lda")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_f664m")
text = "No File"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -86.0
offset_right = 1.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.99116415, 0.99116427, 0.99116415, 1)
theme_override_colors/font_focus_color = Color(0.0023445855, 0.0023445901, 0.0023446013, 1)
theme_override_colors/font_pressed_color = Color(0.008202022, 0.008202025, 0.008202025, 1)
theme_override_colors/font_hover_color = Color(0.008202003, 0.008202028, 0.008202062, 1)
theme_override_colors/font_hover_pressed_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_normal_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_focus_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_pressed_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_colors/icon_hover_color = Color(3.723037e-05, 3.723037e-05, 3.7230366e-05, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_fonts/font = ExtResource("2_74lda")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_q7pnu")
text = "Back"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -393.0
offset_top = -86.0
offset_right = -182.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.99116415, 0.99116427, 0.99116415, 1)
theme_override_colors/font_focus_color = Color(0.0023445855, 0.0023445901, 0.0023446013, 1)
theme_override_colors/font_pressed_color = Color(0.008202022, 0.008202025, 0.008202025, 1)
theme_override_colors/font_hover_color = Color(0.008202003, 0.008202028, 0.008202062, 1)
theme_override_colors/font_hover_pressed_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_normal_color = Color(0.0023445897, 0.00234459, 0.00234459, 1)
theme_override_colors/icon_focus_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_colors/icon_pressed_color = Color(0.004899827, 0.004899827, 0.004899827, 1)
theme_override_colors/icon_hover_color = Color(3.723037e-05, 3.723037e-05, 3.7230366e-05, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_fonts/font = ExtResource("2_74lda")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_q7pnu")
text = "Start"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
